test/tests/compiler/9_functions/invalid_types/assign_value_to_function.plx
pub fn main(none) i32 {
    fn x(none) i32;
    x = 3
    return 0
}
